# AED-Smart-Alarm

./: Google_Apps_Script  Google_Apps_Script_V2  README.md
Firmware/: AED_Google_Apps_Script.js  peripherals.c
Firmware/Base Station/: main.c  oled_init.h
Firmware/Base_Station/: CMakeLists.txt  README.md  sdkconfig
Firmware/Monitoring_Device/: CMakeLists.txt  README.md  sdkconfig
Firmware/Monitoring_Device_CAM/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Firmware/Monitoring_Device_CAM/main/: CMakeLists.txt  Kconfig.projbuild  UWS_include.h  camera_functions.c  camera_include.h  main.c  monitoring_device.c  monitoring_device.h  wifi_functions.c  wifi_include.h
Firmware/main/: main.c  oled_functions.h  oled_init.h
Hardware/3D_models/: AED_BS_BACK v2.stl  AED_BS_BACK v4.stl  AED_BS_BACK v5.stl  AED_BS_BOT v13.stl  AED_BS_FT_SIDES v11.stl  AED_BS_FT_SIDES v15.stl  AED_BS_FT_SIDES v3.stl  AED_BS_FT_SIDES v8.stl  AED_BS_TOP v11.stl  AED_BS_TOP v4.stl  AED_BS_TOP v8.stl  AED_BS_sup v1.stl  AED_MD_BOT v11.stl  AED_MD_BOT v15.stl  AED_MD_BOT v16.stl  AED_MD_BOT v6.stl  AED_MD_TOP v10.stl  AED_MD_TOP v2.stl  AED_MD_TOP v4.stl  AED_MD_TOP v8.stl
Hardware/Base_Station_Rev1.3/: AED SMART ALARM BASE STATION.csv  Base Station-job.gbrjob  Base Station.kicad_pcb  Base Station.kicad_prl  Base Station.kicad_pro  Base Station.kicad_sch  Base Station.kicad_sch-bak  Base Station.xml  _autosave-untitled.kicad_sch  base_station_USB_sch.kicad_sch  base_station_input_power.kicad_sch  base_station_peripherals.kicad_sch  base_station_peripherals.kicad_sch-bak  fp-info-cache  (+4 more)
(+134 files in other folders)
